criados css e renomeado AccountCreation

--- a/templates/AccountCreation.html
+++ b/templates/AccountCreation.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criação de conta</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='assets/index.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/AccountCreation.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='assets/index.css') }}"> <!-- Adjust path if assets moved -->
+    <title>Criação de conta</title>
 </head>
 <body>
     <div id="container">
