--- a/static/css/AccountCreation.css
+++ b/static/css/AccountCreation.css
@@ -1,4 +1,4 @@
-/* Login.css */
+/* AccountCreation.css */
 
 /* Layout principal */
 #container {
@@ -18,12 +18,12 @@
     justify-content: center;
     align-items: center;
     width: 30%;
-    height: 55%;
+    height: 70%;
     background-color: var(--branco);
     border-radius: 40px;
 }
 
-#login-form {
+#register-form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -36,7 +36,9 @@
 }
 
 /* Inputs do formulário */
+input[type=text],
 input[type=email],
+input[type=tel],
 input[type=password] {
     outline: none;
     font-size: 20px;
@@ -48,96 +50,83 @@ input[type=password] {
     width: 75%;
 }
 
+input[type=text]::placeholder,
 input[type=email]::placeholder,
+input[type=tel]::placeholder,
 input[type=password]::placeholder {
     color: var(--texto-placeholder);
 }
 
-/* Container inferior com "Lembre-se de mim" e "Esqueceu a senha?" */
-#bottom-inputs-container {
+/* Botões */
+#btn-annex, #btn-register, #btn-login {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    gap: 10px;
-    margin: 5px 0;
-    padding: 10px;
-    width: 75%;
-}
-
-/* Estilo para o checkbox personalizado */
-.checkbox {
-    position: absolute;
-    opacity: 0;
-    width: 1px;
-    height: 1px;
-}
-
-.checkbox + label {
-    display: inline-flex;
-    align-items: center;
-    gap: 10px;
+    font-size: 22px;
+    font-weight: bold;
+    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
+    position: relative;
     cursor: pointer;
-    font-size: 16px;
-    user-select: none;
+    padding: 10px;
 }
 
-.checkbox + label::before {
-    content: "";
-    background: url('../img/UncheckedCheckbox.png') no-repeat;
-    background-size: contain;
-    width: 30px;
-    height: 30px;
-    display: inline-block;
+#btn-annex {
+    padding-left: 20px;
+    padding-right: 0; /* garante borda direita limpa */
+    width: 79%;
+    background: var(--branco);
+    color: var(--amarelo-um-pouco-escuro);
+    border: 3px solid var(--amarelo-um-pouco-escuro);
+    justify-content: space-between;
 }
 
-.checkbox:checked + label::before {
-    background-image: url('../img/CheckedCheckbox.png');
+#btn-register {
+    width: 79%;
+    background-color: var(--amarelo-um-pouco-escuro);
+    color: var(--branco);
+    border: none;
+    justify-content: center;
+    margin-top: 5%;
 }
 
-/* Link "Esqueceu a senha?" */
-#a-forgot-password {
-    color: var(--azul);
-    font-style: italic;
+#btn-login {
+    width: 100%;
+    background: var(--branco);
+    color: var(--amarelo-um-pouco-escuro);
+    border: 3px solid var(--amarelo-um-pouco-escuro);
+    justify-content: center;
 }
 
-/* Link "Criar Conta" */
-#a-register {
+/* Ícones e elementos auxiliares */
+#btn-annex #icon-import {
+    width: 40px;
+    height: 40px;
+    margin-left: auto;
+    margin-right: 0;
+    padding: 0;
+    padding-right: 10px;
+}
+
+#file-chosen {
+    font-size: 14px;
+    color: #666;
+    margin-top: -10px;
+    margin-bottom: 20px;
+    align-self: flex-start;
+}
+
+#input-file {
+    display: none;
+}
+
+#a-login {
     text-decoration: none;
     width: 79%;
     cursor: pointer;
     position: relative;
 }
 
-#a-register {
+#a-login {
     margin-top: 5px;
-}
-
-/* Botões */
-#btn-register, #btn-login {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 22px;
-    font-weight: bold;
-    box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
-    width: 100%;
-    position: relative;
-    cursor: pointer;
-    padding: 10px;
-}
-
-#btn-register {
-    background: var(--branco);
-    color: var(--amarelo-um-pouco-escuro);
-    border: 3px solid var(--amarelo-um-pouco-escuro);
-}
-
-#btn-login {
-    background-color: var(--amarelo-um-pouco-escuro);
-    color: var(--branco);
-    border: none;
-    margin-top: 7.5%;
-    width: 79%;
 }
 
 /* Fundo decorativo */
