--- a/static/css/Main.css
+++ b/static/css/Main.css
@@ -358,6 +358,7 @@ input[type=range]::-webkit-slider-thumb {
 .service-card {
     background-color: #B5BFAE;
     width: 100%;
+    height: 50%;
     box-sizing: border-box; /* Garante que padding/border não afetem a largura */
     margin: 0;
     border-radius: 30px;
