--- a/static/css/ServiceCreation.css
+++ b/static/css/ServiceCreation.css
@@ -10,30 +10,7 @@
     align-items: center;
 }
 
-/* Formulário principal */
-#container-form {
-    position: relative;
-    z-index: 99;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 30%;
-    height: auto;
-    min-height: fit-content;
-    background-color: var(--branco);
-    border-radius: 40px;
-    padding: 1%;
-}
-
-#register-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
-
-/* Cabeçalho (repetido do Main, talvez deva ser um estilo global?) */
+/* Cabeçalho (EXATAMENTE IGUAL AO MAIN - CORRIGIDO) */
 #container-header {
     position: fixed;
     z-index: 100;
@@ -84,24 +61,19 @@
     width: 100%;
 }
 
+#input-search-bar {
+    width: 100%;
+    padding-left: 35px; /* espaço à esquerda para a imagem */
+    border-radius: 10px;
+}
+
 .icon-search {
     position: absolute;
-    right: -10px;
+    right: 10px; /* POSIÇÃO CORRIGIDA - estava -10px */
     top: 50%;
     transform: translateY(-50%);
     height: 50%;
     width: auto;
-}
-
-#input-search-bar {
-    width: 100%;
-    padding-left: 35px;
-    border-radius: 10px;
-}
-
-#input-search-bar {
-    width: 100%;
-    border-radius: 10px;
 }
 
 #container-header input[type=text] {
@@ -111,6 +83,8 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     padding: 10px;
     margin: 5px;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 #container-header input[type=text]::placeholder {
@@ -134,20 +108,45 @@
     height: 100%;
 }
 
-#qty-chronos {
+.qty-chronos {
     display: flex;
     align-items: center;
     gap: 1px;
     width: 18%;
 }
 
-#qty-chronos-img {
+.qty-chronos-img {
     width: 55%;
     height: 100%;
 }
 
-#qty-chronos-text {
+.qty-chronos-text {
     font-weight: bold;
+    margin: 0;
+}
+
+/* Formulário principal */
+#container-form {
+    position: relative;
+    z-index: 99;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    height: auto;
+    min-height: fit-content;
+    background-color: var(--branco);
+    border-radius: 40px;
+    padding: 1%;
+    margin-top: 5%; /* Para não ficar colado no cabeçalho fixo */
+}
+
+#register-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
 /* Fundo decorativo */
