--- a/templates/ServiceCreation.html
+++ b/templates/ServiceCreation.html
@@ -23,9 +23,9 @@
             </div>
             <div id="navbar-buttons">
                 <a class="navbar-a" href="{{ url_for('service_creation_page') }}"><img class="navbar-buttons-img" id="icon-add-service" src="{{ url_for('static', filename='img/Plus.png') }}" alt=""></a>
-                <div id="qty-chronos">
-                    <img id="qty-chronos-img" src="{{ url_for('static', filename='img/Coin.png') }}" alt="">
-                    <p id="qty-chronos-text">123</p> <!-- Valor fixo ou dinâmico -->
+                <div class="qty-chronos">
+                    <img class="qty-chronos-img" src="{{ url_for('static', filename='img/Coin.png') }}" alt="">
+                    <p class="qty-chronos-text">123</p> <!-- Valor fixo ou dinâmico -->
                 </div>
                 <a class="navbar-a" href=""><img class="navbar-buttons-img" id="icon-add-service" src="{{ url_for('static', filename='img/Briefcase.png') }}" alt=""></a>
                 <a class="navbar-a" href=""><img class="navbar-buttons-img" id="icon-add-service" src="{{ url_for('static', filename='img/Profile.png') }}" alt=""></a>
